# weight-recorder

./: .gitignore  cabal.project  weight-recorder.cabal
app/: Main.hs
sql/: schema.sql
src/Entity/: User.hs  WeightRecord.hs
src/Model/: User.hs  WeightRecord.hs
src/Web/: Core.hs  Router.hs
src/Web/Action/: Login.hs  NewRecord.hs  Register.hs
templates/: login.mustache  records.mustache  register.mustache
