cabal-version: 2.4
name:          weight-recorder
version:       0.1.0.0
author:
maintainer:

library
  exposed-modules:
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
      base                  >= 4.14 && < 5
    , scotty                >= 0.20
    , warp                  >= 3.3
    , relational-record     >= 0.2
    , relational-query      >= 0.12
    , relational-query-HDBC >= 0.6
    , HDBC                  >= 2.4
    , HDBC-sqlite3          >= 2.3
    , mustache              >= 2.4
    , aeson                 >= 2.0
    , text                  >= 1.2

executable weight-recorder
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
      base             >= 4.14 && < 5
    , weight-recorder
